crates/test-files/fixtures/compile_errors/invalid_impl_location.fe
use std::traits::Dummy
use std::context::Context

impl Dummy for Context {}
